Aggiunta: Implementazione della Rete Bayesiana e del modello addestrato

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ htmlcov/
 *.h5
 *.model
 
-# Dati sensibili (decommentare se necessario)
+# Dati (decommentare se necessario)
+data/*.bif 
 # data/*.csv
 # data/*.xlsx
 
